fix style section mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -568,7 +568,7 @@ section {
   width: 590px;
   padding: 30px 30px 50px 30px;
   margin: 20px 0;
-  margin-top: 190px;
+  margin-top: 150px;
   position: relative;
   background: #fbfbfb;
   border-radius: 3px;
@@ -654,7 +654,7 @@ footer {
     margin: 0;
   }
   section {
-    margin-top: 300px;
+    margin-top: 200px;
     margin-bottom: 0px;
     width: auto;
   }
